# efp

./: .gitignore  CMakeLists.txt  EdgewareFrameProtocol.cpp  EdgewareFrameProtocol.h  EdgewareInternal.h  ElasticFrameProtocol.cpp  ElasticFrameProtocol.h  ElasticInternal.h  LICENSE  LISENCE.md  README.md  bitbucket-pipelines.yml  buildbridge.h  buildbridge.sh  logger.h  main.cpp
.github/workflows/: codeql-analysis.yml  efp_base_macos.yml  efp_base_ubuntu.yml  efp_base_win.yml  unit_tests.yml
efp_c_api/: elastic_frame_protocol_c_api.h  main.c
efp_golang/: efp_api.go  efp_callbacks.go  efp_golang.go  readme.txt
unitTestTemplate/: UnitTestTemplate.cpp  UnitTestTemplate.h
unitTests/: PerformanceLab.cpp  PerformanceLab.h  UnitTest1.cpp  UnitTest1.h  UnitTest10.cpp  UnitTest10.h  UnitTest11.cpp  UnitTest11.h  UnitTest12.cpp  UnitTest12.h  UnitTest13.cpp  UnitTest13.h  UnitTest14.cpp  UnitTest14.h  UnitTest15.cpp  UnitTest15.h  UnitTest16.cpp  UnitTest16.h  UnitTest17.cpp  UnitTest17.h  UnitTest18.cpp  UnitTest18.h  UnitTest19.cpp  UnitTest19.h  UnitTest2.cpp  UnitTest2.h  UnitTest20.cpp  UnitTest20.h  UnitTest21.cpp  UnitTest21.h  UnitTest22.cpp  UnitTest22.h  UnitTest23.cpp  UnitTest24.cpp  UnitTest3.cpp  UnitTest3.h  UnitTest4.cpp  UnitTest4.h  UnitTest5.cpp  UnitTest5.h  (+10 more)
